[tool.poetry]
name = "serviceman"
version = "0.1.0"
description = ""
authors = ["PranitMalhotra <pranitmalhotra7@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
uvicorn = "^0.30.6"
fastapi = "^0.115.0"
scalar-fastapi = "^1.0.3"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
